--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <!-- Supabase CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 
 <body>
@@ -21,10 +23,29 @@
                 <span class="logo-icon">✈️</span>
                 <span class="logo-text">AI Travel Planner</span>
             </div>
-            <button class="login-btn" id="loginBtn">
-                <span class="btn-icon">👤</span>
-                로그인
-            </button>
+            <!-- 로그인 전: 로그인/회원가입 버튼 -->
+            <div class="auth-buttons" id="authButtons">
+                <button class="login-btn" id="loginBtn">
+                    <span class="btn-icon">👤</span>
+                    로그인
+                </button>
+                <button class="signup-btn" id="signupBtn">
+                    회원가입
+                </button>
+            </div>
+            <!-- 로그인 후: 사용자 프로필 (기본 숨김) -->
+            <div class="user-profile" id="userProfile" style="display: none;">
+                <button class="profile-btn" id="profileBtn">
+                    <span class="profile-avatar">👤</span>
+                    <span class="profile-email" id="profileEmail">user@email.com</span>
+                    <span class="profile-arrow">▼</span>
+                </button>
+                <div class="profile-dropdown" id="profileDropdown">
+                    <button class="dropdown-item" id="logoutBtn">
+                        <span>🚪</span> 로그아웃
+                    </button>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -69,7 +90,7 @@
                         어디로 떠나시나요?
                     </label>
                     <div class="search-input-wrapper">
-                        <input type="text" class="form-input search-input" id="destinationInput"
+                        <input type="text" class="form-input search-input" name="destination" id="destinationInput"
                             placeholder="도시 또는 국가를 검색하세요 (예: 파리, 도쿄, 제주도)" autocomplete="off">
                         <span class="search-icon">🔍</span>
                         <div class="search-suggestions" id="searchSuggestions">
@@ -87,12 +108,12 @@
                     <div class="date-inputs">
                         <div class="date-input-wrapper">
                             <label class="date-sublabel">출발일</label>
-                            <input type="date" class="form-input date-input" id="startDate">
+                            <input type="date" class="form-input date-input" name="start_date" id="startDate">
                         </div>
                         <span class="date-separator">~</span>
                         <div class="date-input-wrapper">
                             <label class="date-sublabel">도착일</label>
-                            <input type="date" class="form-input date-input" id="endDate">
+                            <input type="date" class="form-input date-input" name="end_date" id="endDate">
                         </div>
                     </div>
                 </div>
@@ -281,6 +302,81 @@
         </div>
     </footer>
 
+    <!-- 로그인/회원가입 모달 -->
+    <div class="auth-modal-overlay" id="authModalOverlay">
+        <div class="auth-modal">
+            <button class="modal-close" id="modalClose">✕</button>
+
+            <!-- 모달 헤더/탭 -->
+            <div class="auth-tabs">
+                <button class="auth-tab active" id="loginTab" data-tab="login">로그인</button>
+                <button class="auth-tab" id="signupTab" data-tab="signup">회원가입</button>
+            </div>
+
+            <!-- 로그인 폼 -->
+            <form class="auth-form" id="loginForm">
+                <!-- 구글 로그인 버튼 -->
+                <button type="button" class="google-login-btn" id="googleLoginBtn">
+                    <svg class="google-icon" viewBox="0 0 24 24" width="20" height="20">
+                        <path fill="#4285F4"
+                            d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+                        <path fill="#34A853"
+                            d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+                        <path fill="#FBBC05"
+                            d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+                        <path fill="#EA4335"
+                            d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+                    </svg>
+                    <span>Google로 계속하기</span>
+                </button>
+
+                <!-- 구분선 -->
+                <div class="auth-divider">
+                    <span>또는</span>
+                </div>
+
+                <div class="auth-form-group">
+                    <label class="auth-label">이메일</label>
+                    <input type="email" class="auth-input" id="loginEmail" placeholder="your@email.com" required>
+                </div>
+                <div class="auth-form-group">
+                    <label class="auth-label">비밀번호</label>
+                    <input type="password" class="auth-input" id="loginPassword" placeholder="비밀번호 입력" required>
+                </div>
+                <button type="submit" class="auth-submit-btn" id="loginSubmitBtn">
+                    <span class="btn-text">로그인</span>
+                </button>
+            </form>
+
+            <!-- 회원가입 폼 (기본 숨김) -->
+            <form class="auth-form" id="signupForm" style="display: none;">
+                <div class="auth-form-group">
+                    <label class="auth-label">이메일</label>
+                    <input type="email" class="auth-input" id="signupEmail" placeholder="your@email.com" required>
+                </div>
+                <div class="auth-form-group">
+                    <label class="auth-label">비밀번호</label>
+                    <input type="password" class="auth-input" id="signupPassword" placeholder="6자 이상 입력" minlength="6"
+                        required>
+                </div>
+                <div class="auth-form-group">
+                    <label class="auth-label">비밀번호 확인</label>
+                    <input type="password" class="auth-input" id="signupPasswordConfirm" placeholder="비밀번호 다시 입력"
+                        required>
+                </div>
+                <button type="submit" class="auth-submit-btn" id="signupSubmitBtn">
+                    <span class="btn-text">회원가입</span>
+                </button>
+            </form>
+
+            <!-- 에러 메시지 -->
+            <div class="auth-error" id="authError" style="display: none;"></div>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="supabase.js"></script>
+    <script src="auth.js"></script>
     <script src="script.js"></script>
 </body>
 
