--- a/itinerary.html
+++ b/itinerary.html
@@ -12,8 +12,9 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <!-- Auth & Database Scripts -->
-    <script type="module" src="supabase.js"></script>
-    <script type="module" src="auth.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="supabase.js" defer></script>
+    <script src="auth.js" defer></script>
     <style>
         /* Itinerary Page Specific Styles */
         .itinerary-page {
@@ -345,12 +346,17 @@
         </div>
     </footer>
 
-    <script type="module">
-        // Auth 모듈 임포트 (전역 객체 할당을 기다리거나 직접 임포트)
-        import Auth from './auth.js';
-        import { getSupabaseClient } from './supabase.js';
-
+    <script>
         document.addEventListener('DOMContentLoaded', async function () {
+            // 전역 객체 매핑 (안전하게 사용하기 위함)
+            const Auth = window.Auth;
+            const getSupabaseClient = () => window.supabaseClient;
+
+            if (!Auth || !getSupabaseClient()) {
+                console.warn('Auth or Supabase client not loaded yet. Waiting...');
+                // 혹시 모를 로딩 지연 대비 (보통 defer 로 해결됨)
+            }
+
             // localStorage에서 일정 데이터 불러오기
             const itineraryData = localStorage.getItem('travelItinerary');
             const tripInfo = JSON.parse(localStorage.getItem('tripInfo') || '{}');
