--- a/index.html
+++ b/index.html
@@ -62,36 +62,35 @@
         <div class="hero-center-content">
             <!-- 메인 헤드라인 -->
             <h1 class="hero-headline">
-                실패없는 여행계획<br>
-                <span class="headline-accent">5분이면 끝납니다.</span>
+                2만 명이 선택한<br>
+                <span class="headline-accent">여행 계획법</span>
             </h1>
             <p class="hero-tagline">
-                항공권부터 맛집, 동선까지.<br>
-                <strong>Plan.It AI</strong>가 당신의 취향대로 완벽한 일정을 짜줍니다.
+                맛집-교통-숙소-동선까지 5분 안에 자동 완성됩니다.
             </p>
 
             <!-- 검색 박스 (에어비앤비 스타일) -->
             <div class="hero-search-box">
                 <form class="hero-search-form" id="heroSearchForm">
                     <div class="search-field search-field-destination">
-                        <label>어디로</label>
+                        <label>여행지가 어디신가요?</label>
                         <input type="text" id="heroDestination" class="hero-search-input destination-input"
                             placeholder="여행지 검색" autocomplete="off">
                         <div class="search-suggestions hero-suggestions"></div>
                     </div>
                     <div class="search-divider"></div>
                     <div class="search-field search-field-date">
-                        <label>체크인</label>
+                        <label>언제 출발하세요?</label>
                         <input type="date" id="heroStartDate" class="hero-search-input">
                     </div>
                     <div class="search-divider"></div>
                     <div class="search-field search-field-date">
-                        <label>체크아웃</label>
+                        <label>언제 돌아오세요?</label>
                         <input type="date" id="heroEndDate" class="hero-search-input">
                     </div>
                     <button type="button" class="hero-search-btn" id="heroSearchBtn">
                         <span class="search-btn-icon">🔍</span>
-                        <span class="search-btn-text">검색</span>
+                        <span class="search-btn-text">내 여행 계획 받기</span>
                     </button>
                 </form>
             </div>
