Implement independent profile page and link from main menu

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <span class="profile-arrow">▼</span>
                 </button>
                 <div class="profile-dropdown" id="profileDropdown">
-                    <button class="dropdown-item" id="myInfoBtn">
+                    <a href="profile.html" class="dropdown-item" id="myInfoBtn">
                         <span>👤</span> 내 정보
-                    </button>
+                    </a>
                     <button class="dropdown-item" id="myTripsBtn">
                         <span>✈️</span> 내 여행
                     </button>
@@ -384,30 +384,7 @@
     <!-- 일정 결과는 itinerary.html 페이지에서 표시됩니다 -->
 
     <!-- 내 정보 모달 -->
-    <div class="modal-overlay" id="myInfoModalOverlay">
-        <div class="modal-content">
-            <button class="modal-close" id="myInfoModalClose">✕</button>
-            <h2 class="modal-title">👤 내 정보</h2>
-            <div class="my-info-content">
-                <div class="info-avatar">
-                    <span class="avatar-icon">👤</span>
-                </div>
-                <div class="info-group">
-                    <label class="info-label">이메일</label>
-                    <p class="info-value" id="myInfoEmail">-</p>
-                </div>
-                <div class="info-group">
-                    <label class="info-label">닉네임</label>
-                    <input type="text" class="info-input" id="myInfoNickname" placeholder="닉네임을 입력하세요">
-                </div>
-                <div class="info-group">
-                    <label class="info-label">가입일</label>
-                    <p class="info-value" id="myInfoCreatedAt">-</p>
-                </div>
-                <button class="btn-save-info" id="saveInfoBtn">저장하기</button>
-            </div>
-        </div>
-    </div>
+    <!-- 내 정보 모달 삭제됨 (profile.html로 이동) -->
 
     <!-- 내 여행 모달 -->
     <div class="modal-overlay" id="myTripsModalOverlay">
