Update profile travel styles to match search options

--- a/profile.html
+++ b/profile.html
@@ -321,10 +321,14 @@
             <div class="profile-section">
                 <label class="section-label">여행 스타일</label>
                 <div class="button-group" id="styleGroup">
-                    <button class="select-btn" data-value="nature">🌿 자연과 힐링</button>
-                    <button class="select-btn" data-value="activity">🎢 체험·액티비티</button>
-                    <button class="select-btn" data-value="culture">🏛️ 관광·문화</button>
-                    <button class="select-btn" data-value="food">🍜 맛집 투어</button>
+                    <button class="select-btn" data-value="food">🍽️ 맛집 탐방</button>
+                    <button class="select-btn" data-value="relax">⛱️ 휴양</button>
+                    <button class="select-btn" data-value="activity">🏄 액티비티</button>
+                    <button class="select-btn" data-value="culture">🎭 문화예술</button>
+                    <button class="select-btn" data-value="shopping">🛍️ 쇼핑</button>
+                    <button class="select-btn" data-value="nature">🌿 자연 탐험</button>
+                    <button class="select-btn" data-value="photo">📷 포토 스팟</button>
+                    <button class="select-btn" data-value="nightlife">🌙 나이트라이프</button>
                 </div>
             </div>
 
